add: Create Form

--- a/src/app/modules/snippets/snippets.component.html
+++ b/src/app/modules/snippets/snippets.component.html
@@ -1,1 +1,8 @@
+<nav>
+  <ul>
+    <li><a [routerLink]="['/snippets']" routerLinkActive="active">Explore Snippets</a></li>
+    <li><a [routerLink]="['/snippets/create']" routerLinkActive="active">Create Snippets</a></li>
+  </ul>
+</nav>
+
 <router-outlet></router-outlet>
