--- a/src/app/modules/snippets/snippet-list/snippet-list.component.html
+++ b/src/app/modules/snippets/snippet-list/snippet-list.component.html
@@ -2,6 +2,10 @@
   <article class="snippet" *ngFor="let snippet of snippets">
     <header class="snippet__header">
       <h3 class="snippet__title">{{snippet.title}}</h3>
+
+      <div>
+        <a href="mailto:{{snippet.user.email}}">{{snippet.user.name}}</a>
+      </div>
     </header>
 
     <div class="snippet__body">
